--- a/_posts/2017-12-11-agu2017.md
+++ b/_posts/2017-12-11-agu2017.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: Estimation of strain sensitivity of seismic velocity changes using the Earth tide
+title: AGU・Seismic velocity changes in response to different direction of tidal strain
 type: presentation
 ---
 
-Seismic velocity changes in the crust and/or subsurface have been often observed in association with the occurrences of earthquakes or volcanic activities. Mechanisms of the seismic velocity changes are, for example, non-linear behavior of subsurface, strain changes, ground water level changes etc. To examine the effects of strain changes, the solid earth tide is a good input signal because the strain sensitivity of velocity changes can be measured at many places by using seismic interferometry [Takano et al., 2014; Hillers et al., 2015]. However, there are few reports which detect the velocity changes due to the Earth tide by noise correlation analysis. The aim of this study is to estimate the strain sensitivity of velocity changes using the Earth tide at the Izu-Oshima volcano, where the small seismic array and seismic network are deployed. 
-  We analyze the ambient noises recorded at the seismic array operated by NIED. The array consists of 7 short-period sensors with a diameter of ~100 m. The continuous data from 1 Apr. 2014 to 1 Apr. 2015 is analyzed. The tidal strain is extracted from the raw data of the strain-meter deployed by JMA using Baytap-08 [Tamura et al., 1991]. We estimate the velocity changes due to the Earth tide as follows. First, we divide the observation period into five episodes: dilatational and contractional, according to volumetric strain values. CCFs of ambient noise at 2 – 4 Hz are separately stacked for each divided episode. Subsequently, we measure the velocity changes by calculating the phase delay between stacked CCFs at lapse time of less than 6 s.
-  It is recognized that seismic velocity decreases during the dilatational episode with respect to the contractional episode. Strain sensitivity of seismic velocity changes, which is obtained by averaging for six station pairs, is estimated to be (-1.6±0.5)×104  strain-1. The strain sensitivity of the seismic velocity changes is consistent with that at the foot of Mt. Iwate [Takano et al., 2014]. We also estimate the strain sensitivity of velocity changes using the seismic network by JMA, in which station separation distances range from 3 to 10 km. The strain sensitivity of seismic velocity changes is estimated to be (-9.5±2.5)×103 strian-1 , which is within two times than the result of the small array. This result indicate that almost same strain sensitivities are observed in whole island. 
+During the AGU Fall Meeting 2017, I presented a work on characteristics of strain sensitivity of seismic velocity changes.
 
+I talked about the seismic velocity changes in response to tidal strains at different lapse-times. In the presentation, I discussed the observed velocity changes with the wave properties of Green's function by applying an array analysis to cross-correlation functions of ambient noise. 
+
+[Abstract](https://agu.confex.com/agu/fm17/meetingapp.cgi/Paper/270586){:target="_blank"}
