--- a/_posts/2018-04-08-egu2018.md
+++ b/_posts/2018-04-08-egu2018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Seismic velocity changes in response to different direction of tidal strain
+title: EGU・Seismic velocity changes in response to different direction of tidal strain
 type: presentation
 ---
 
