--- a/_posts/2017-12-11-agu2017.md
+++ b/_posts/2017-12-11-agu2017.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: AGU・Seismic velocity changes in response to different direction of tidal strain
+title: AGU・dvv/v caused by the tidal strain at Izu-Oshima
 type: presentation
 ---
 
