--- a/_posts/2018-10-20-moth.md
+++ b/_posts/2018-10-20-moth.md
@@ -6,5 +6,5 @@ type: misc
 
 I found a moth simulating dead leaves in front of my appartment in Japan.
 
-[[Photo1]](/photo/Moth1.jpg)
-[[Photo2]](/photo/Moth2.jpg)
+[Photo1](/photo/Moth1.jpg){:target="_blank"}  
+[Photo2](/photo/Moth2.jpg){:target="_blank"}
