--- a/_posts/2019-03-27-graduate.md
+++ b/_posts/2019-03-27-graduate.md
@@ -6,4 +6,4 @@ type: misc
 
 I received PhD degree in Geophysics from Tohoku University in Japan!
 
-I'll move to Earthquake Research Institute, the University of Tokyo from April 2019 as a postdoc researcher of Japan society for the promotion of science.
+I'll move to Earthquake Research Institute, the university of Tokyo from April 2019 as a postdoctoral fellowship of Japan Society for the Promotion of Science.
