--- a/_posts/2018-04-01-grenoble.md
+++ b/_posts/2018-04-01-grenoble.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Visiting ISTerre (Grenoble University)
+title: Visiting student at ISTerre (Grenoble University)
 type: misc
 ---
 
