--- a/_posts/2014-08-04-dvv-tide.md
+++ b/_posts/2014-08-04-dvv-tide.md
@@ -2,6 +2,7 @@
 layout: post
 title: Velocity changes related with the Earth tide
 type: article
+description: Seismic velocity changes caused by the Earth tide（地球潮汐による地震波速度変化）
 ---
 
 >Takano, T., T. Nishimura, H. Nakahara, Y. Ohta, and S. Tanaka (2014), Seismic velocity changes caused by the Earth tide: Ambient noise correlation analyses of small‐array data, Geophys. Res. Lett., 41, 6131-6136, doi: 10.1002/2014GL060690. [[PDF]](/papers/Takano+2014.pdf)
