--- a/_posts/2023-07-05-tifris.md
+++ b/_posts/2023-07-05-tifris.md
@@ -5,4 +5,4 @@ type: misc
 description: 
 ---
 
-I became a fellow of the Tohoku Initiative for Fostering Global Researchers for Interdisciplinary Sciences ([[TI-FRIS]](https://www.ti-fris.tohoku.ac.jp/en/overview/){:target="_blank"}).
+I became a fellow of the Tohoku Initiative for Fostering Global Researchers for Interdisciplinary Sciences ([TI-FRIS](https://www.ti-fris.tohoku.ac.jp/en/overview/){:target="_blank"}).
